--- a/Faculty_Information_System/Faculty_Information_System.vbproj
+++ b/Faculty_Information_System/Faculty_Information_System.vbproj
@@ -76,6 +76,14 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Faculty_databaseDataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Faculty_databaseDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Faculty_databaseDataSet1.vb">
+      <DependentUpon>Faculty_databaseDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Faculty_Page.Designer.vb">
       <DependentUpon>Faculty_Page.vb</DependentUpon>
     </Compile>
@@ -137,6 +145,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Faculty_databaseDataSet1.xsc">
+      <DependentUpon>Faculty_databaseDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Faculty_databaseDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Faculty_databaseDataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Faculty_databaseDataSet1.xss">
+      <DependentUpon>Faculty_databaseDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -153,6 +172,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\220px-User_icon_2.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Faculty_database.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
