--- a/Faculty_Information_System/Faculty_Information_System.vbproj
+++ b/Faculty_Information_System/Faculty_Information_System.vbproj
@@ -76,6 +76,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add_Details.Designer.vb">
+      <DependentUpon>Add_Details.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Details.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Faculty_databaseDataSet1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -125,6 +131,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Add_Details.resx">
+      <DependentUpon>Add_Details.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Faculty_Page.resx">
       <DependentUpon>Faculty_Page.vb</DependentUpon>
     </EmbeddedResource>
