i think i fixed it

--- a/Faculty_Information_System/Faculty_Information_System.vbproj
+++ b/Faculty_Information_System/Faculty_Information_System.vbproj
@@ -199,7 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Faculty_database.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
