--- a/Faculty_Information_System/Faculty_Information_System.vbproj
+++ b/Faculty_Information_System/Faculty_Information_System.vbproj
@@ -182,6 +182,12 @@
     <Compile Include="Search_Form.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="startup.Designer.vb">
+      <DependentUpon>startup.vb</DependentUpon>
+    </Compile>
+    <Compile Include="startup.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AddProf.resx">
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Search_Form.resx">
       <DependentUpon>Search_Form.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="startup.resx">
+      <DependentUpon>startup.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
