--- a/Faculty_Information_System/Faculty_Information_System.vbproj
+++ b/Faculty_Information_System/Faculty_Information_System.vbproj
@@ -101,8 +101,8 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Faculty_databaseDataSet1.Designer.vb">
-      <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
       <DependentUpon>Faculty_databaseDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Faculty_Page.Designer.vb">
@@ -170,6 +170,12 @@
     <Compile Include="Prof_Experience.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Prof_News.Designer.vb">
+      <DependentUpon>Prof_News.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Prof_News.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Prof_Publication.Designer.vb">
       <DependentUpon>Prof_Publication.vb</DependentUpon>
     </Compile>
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Prof_Experience.resx">
       <DependentUpon>Prof_Experience.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Prof_News.resx">
+      <DependentUpon>Prof_News.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Prof_Publication.resx">
       <DependentUpon>Prof_Publication.vb</DependentUpon>
